--- a/subs-mvp/requirements.txt
+++ b/subs-mvp/requirements.txt
@@ -3,4 +3,5 @@ uvicorn[standard]==0.30.6
 kubernetes==30.1.0
 psycopg[binary,pool]==3.2.1
 pydantic==2.8.2
+pydantic-settings==2.4.0
 orjson==3.10.7
