--- a/subs-mvp/requirements.txt
+++ b/subs-mvp/requirements.txt
@@ -5,3 +5,6 @@ psycopg[binary,pool]==3.2.1
 pydantic==2.8.2
 pydantic-settings==2.4.0
 orjson==3.10.7
+httpx==0.27.0
+pytest==8.3.2
+pytest-asyncio==0.23.7
